# memogarden-core

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml  run.sh
data/: .gitignore
docs/: architecture.md  dev-guide.md  refactor-plan.md
memogarden/: config.py
memogarden/api/v1/: __init__.py
memogarden/api/v1/core/: recurrences.py  transactions.py
memogarden/auth/: decorators.py  service.py  token.py  ui.py
memogarden/db/: __init__.py  seed.py  transaction.py
memogarden/schema/: schema.sql  types.py
memogarden/utils/: recurrence.py  secret.py
memogarden_core/: __init__.py  config.py  database.py  exceptions.py  main.py
memogarden_core/api/: __init__.py  auth.py  validation.py
memogarden_core/api/v1/: __init__.py  recurrences.py  transactions.py
memogarden_core/auth/: __init__.py  api.py  api_keys.py  decorators.py  service.py  token.py  ui.py
memogarden_core/auth/schemas/: __init__.py  auth.py
memogarden_core/db/: __init__.py  entity.py  seed.py  transaction.py
memogarden_core/schema/: __init__.py  schema.sql  types.py
memogarden_core/schemas/: __init__.py
memogarden_core/templates/: login.html
memogarden_core/utils/: __init__.py  isodatetime.py  isotime.py  recurrence.py  secret.py  uid.py
tests/: __init__.py  conftest.py  test_app.py  test_config.py  test_database.py  test_errors.py  test_main.py  test_schemas.py
tests/api/: __init__.py  test_health.py  test_transactions.py  test_validation.py
tests/auth/: test_api_key_endpoints.py  test_api_keys.py  test_decorators.py  test_endpoints.py  test_schemas.py  test_service.py  test_token.py
tests/db/: test_core.py  test_entity.py  test_query.py  test_recurrence.py  test_transaction.py
tests/schema/: test_types.py
tests/utils/: test_isodatetime.py  test_isotime.py  test_uid.py
(+4 files in other folders)
